use of material design to style login and registration page

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,14 +4,7 @@
     <meta charset="utf-8"/>
     <title>Login</title>
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css"/>
-    <style type="text/css">
-        body {
-            padding-top: 100px;
-        }
-        .form-container {
-            width: 400px;
-            margin: auto;
-        }
-    </style>
+    <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.css">
+    <link rel="stylesheet" href="/stylesheet/style.css" type="text/css">
 </head>
 <body>
