--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,25 +1,32 @@
 <%- include('partials/header') %>
-<div class="form-container">
-    <h2>Login</h2>
+<hgroup>
+    <h1>Expense Tracker for Toptal Tech-2-Task</h1>
+    <h3>By Anuj Parikh</h3>
+</hgroup>
+<form class="login-form" method="post">
     <% if(locals.error) { %>
     <div class="alert alert-danger"><%= error %></div>
     <% } %>
     <% if(locals.success) { %>
     <div class="alert alert-success"><%= success %></div>
     <% } %>
-    <form method="post">
-        <div class="form-group">
-            <label for="username">Username</label>
-            <input type="text" name="username" id="username" value="<%= locals.username || '' %>" class="form-control"/>
-        </div>
-        <div class="form-group">
-            <label for="password">Password</label>
-            <input type="password" name="password" id="password" class="form-control"/>
-        </div>
-        <div class="form-group">
-            <button type="submit" class="btn btn-primary">Login</button>
-            <a href="/register" class="btn btn-link">Register</a>
-        </div>
-    </form>
-</div>
+    <div class="group">
+        <input placeholder="Username" type="text" name="username" id="username" value="<%= locals.username || '' %>" required/><span
+                class="highlight"></span><span class="bar"></span>
+    </div>
+    <div class="group">
+        <input placeholder="Password" type="password" name="password" id="password" required/><span class="highlight"></span><span
+                class="bar"></span>
+    </div>
+    <div>
+        <button type="submit" class="button buttonBlue">Login
+            <div class="ripples buttonRipples"><span class="ripplesCircle"></span></div>
+        </button>
+        <a href="/register">
+            <button type="button" class="button buttonGreen">Register
+                <div class="ripples buttonRipples"><span class="ripplesCircle"></span></div>
+            </button>
+        </a>
+    </div>
+</form>
 <%- include('partials/footer') %>
