user expense page

--- a/app/app-content/app.css
+++ b/app/app-content/app.css
@@ -18,3 +18,11 @@
 .forum.table th.cell-stat-2x {
     width: 14em;
 }
+
+.margin-bottom-10 {
+    margin-bottom: 10px;
+}
+
+.margin-bottom-40 {
+    margin-bottom: 40px;
+}
