--- a/app/components/show-users/show-users.html
+++ b/app/components/show-users/show-users.html
@@ -1,16 +1,9 @@
 <div class="container">
     <div class="page-header page-heading">
-        <h1 class="text-center">Expense Management</h1>
+        <h2 class="text-center">Users</h2>
         <div class="clearfix"></div>
     </div>
-    <p class="lead text-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-        incididunt ut labore
-        et dolore magna aliqua.
-        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
-        laborum.</p>
-    <table class="table" st-safe-src="vm.displayed" st-pipe="vm.fetchUsers" st-table="vm.displayed">
+    <table class="table" st-safe-src="vm.displayed" st-pipe="vm.fetchUsers" st-table="vm.users">
         <thead>
         <tr>
             <th><input placeholder="Filter by First Name" st-search="firstName"/></th>
@@ -26,7 +19,7 @@
         </tr>
         </thead>
         <tbody ng-show="!vm.isLoading">
-        <tr ng-click="vm.showUser(row)" ng-repeat="row in vm.displayed">
+        <tr ng-click="vm.showUser(row)" ng-repeat="row in vm.users">
             <td>{{row.firstName}}</td>
             <td>{{row.lastName}}</td>
             <td>{{row.username}}</td>
@@ -91,7 +84,7 @@
                     </button>
                     <button class="btn btn-warning" ng-click="vm.cancel()">Cancel
                     </button>
-                    <button class="btn btn-danger" ng-click="vm.deleteUser(vm.user._id)">Delete Expense
+                    <button class="btn btn-danger" ng-click="vm.deleteUser(vm.user._id)">Delete User
                     </button>
                 </div>
             </div>
