rectify delete user function

--- a/app/components/show-users/show-users.html
+++ b/app/components/show-users/show-users.html
@@ -40,7 +40,7 @@
     <div ng-if="!vm.showUpdateForm">
         <div class="col-md-12 text-center">
             <button class="btn btn-primary" ng-click="vm.showUpdateForm = !vm.showUpdateForm" type="submit"
-                    class="btn btn-default">Add Expense
+                    class="btn btn-default">Add User
             </button>
         </div>
     </div>
