check valid username if expense update

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -30,6 +30,11 @@
                 class="bar"></span>
     </div>
     <div class="group">
+        <input placeholder="Confirm Password" type="password" name="rePassword" id="rePassword" required/><span
+                class="highlight"></span><span
+                class="bar"></span>
+    </div>
+    <div class="group">
         <input placeholder="Role" type="text" name="role" id="role" value="<%= locals.role || '' %>" required/><span
                 class="highlight"></span><span class="bar"></span>
     </div>
