minor refactor and commenting on angular app

--- a/app/components/show-expenses/show-expenses.html
+++ b/app/components/show-expenses/show-expenses.html
@@ -95,7 +95,8 @@
                     <div class="row">
                         <label class="col-md-6">User Name</label>
                         <input class="col-md-4" type="text" class="form-control" ng-model="vm.expense.username"
-                               placeholder="current username" id="username" value="{{vm.expense.username}}" ng-disabled="vm.isRegularUser">
+                               placeholder="current username" id="username" value="{{vm.expense.username}}"
+                               ng-disabled="vm.isRegularUser">
                     </div>
                 </div>
                 <div class="form-group col-md-6">
